# ComfyUI-DonutNodes

./: .gitignore  .tracking  CACHE_INVALIDATION_FIX.md  DonutBlockCalibration.py  DonutClipEncode.py  DonutDetailer.py  DonutDetailer2.py  DonutDetailer4.py  DonutDetailer5.py  DonutDetailerXLBlocks.py  DonutFrequencyAnalysis.py  DonutKSamplerCFGLinear.py  DonutLoadCLIPModels.py  DonutLoadUNetModels.py  DonutSDXLTeaCache.py  DonutSDXLTeaCacheTuned.py  DonutSDXLTeaCacheWorking.py  DonutSpectralNoiseSharpener.py  DonutTiledUpscale.py  DonutWidenMerge.py  DonutWidenMerge.py.backup  Donut_Detailer.py  Donut_Detailer_2.py  Donut_Detailer_4.py  Donut_Detailer_5.py  Donut_Detailer_6.py  MERGE_STRENGTH_BEHAVIOR.md  MERGE_STRENGTH_SOLUTION.md  NODE_DOCUMENTATION.md  README.md  SDXL_TEACACHE_USAGE.md  __init__.py  actual_defaults_test.py  analyze_strength_distribution.py  api.txt  cache_invalidation_validation.py  comprehensive_merge_test.py  config.yaml.example  contrast_monitoring.py  debug_cache_invalidation_issue.py  (+31 more)
.backup/: DonutWidenMerge (working backup).py
shared/: __init__.py  alignment.py  cache_management.py  civitai_api.py  civitai_download.py  config.py  constants.py  core_merge_functions.py  diagnostics.py  exceptions.py  logging_config.py  lora_hash.py  lora_processing.py  memory_management.py  merge_strength.py  renormalization.py  server_routes.py  task_vector.py  tensor_operations.py  utility_functions.py
test_workflows/: sdxl_baseline_workflow.json  sdxl_teacache_aggressive.json  sdxl_teacache_improved.json  sdxl_teacache_tuned_aggressive.json  (+2 more)
(+6 files in other folders)
