[project]
name = "donutnodes"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/DonutsDelivery/ComfyUI-DonutNodes"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DonutNodes"
Icon = ""
includes = []
