[project]
name = "donutnodes"
description = "Block-weighted LoRA stacking with CivitAI integration, Donut Detailer for per-block model tuning, TeaCache acceleration, tiled upscaling, CFG sampling with 18 curve types, and reference-based spectral sharpening."
version = "1.0.41"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/DonutsDelivery/ComfyUI-DonutNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "donutsdelivery"
DisplayName = "ComfyUI-DonutNodes"
Icon = ""
